--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 400px;
+			left: 0px;
 		}
 		.board{
 			height: 100vh;
@@ -62,16 +62,25 @@
 			
 			// TODO 2 - Variable declarations 
 			
+			var positionX = 0;
+			var speedX = 10;
+			var points = 0;
 
-			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
+				positionX += speedX;
+				$box.css("left", positionX);
 				
-
+				if (positionX > boardWidth) {
+					speedX = -speedX
+				}
+				if (positionX <  0){
+					speedX = -speedX;
+				}
 			};
 
 			/* 
@@ -80,7 +89,10 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
+				positionX = 0;
+				speedX += 3;
+				points += 1;
+				$box.text(points);
 
 
 			};
